Fix pmd issues for http-client-jdk module